# slog-lang1

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .pylintrc  CHANGESLOG.md  Dockerfile  LICENSE.md  README.md  TESTOUT  TODO.md  cluster.yaml  compare.md  notes.md  output-simple  requirements.txt  reset-db  runslog  sbatch.sh  server_log  slog-repl  slog-server  slog.80s-242003,ecf4513d532f.btr  slog.80s-243225,ecf4513d532f.btr  slog.80s-244865,ecf4513d532f.btr  slog.80s-246081,ecf4513d532f.btr  slog.80s-250389,ecf4513d532f.btr  slog.80s-252826,ecf4513d532f.btr  slog.80s-342725,ecf4513d532f.btr  slogdb  stuck  tc.slogc  test-small  test.slog  vgcore.19000.REMOVED.git-id  w copy
backend/: .gitignore  CMakeLists.txt  LICENSE.md  README.md
backend/data/: $symbols.csv  D10.size  instruction  instruction.facts
backend/data/2100225/: D_2100225.size
backend/data/4-4-128/: App_4_1_2_3_4  Lam_4_1_2_3_4  Var_2_1_2  manifest
backend/data/4-4-256/: App_4_1_2_3_4  Lam_4_1_2_3_4  Prog_1_1  Var_2_1_2
backend/data/4-4-512/: App_4_1_2_3_4  Lam_4_1_2_3_4  Prog_1_1  Var_2_1_2
backend/data/4-4-64/: App_4_1_2_3_4  Lam_4_1_2_3_4  Prog_1_1  Var_2_1_2
backend/data/412148/: data.size
backend/data/54683cc90494a695bca8f90643f7ca5d8ab91b7873a7a532a9dc60f169f62898/: call__arg__list_3_383.dat.size  let__list_3_162.dat.size  manifest
backend/data/builtin/: manifest
backend/data/fact/: fact.cpp  manifest
backend/data/g12521/: App_4_1_2_3_4  Lam_4_1_2_3_4  Prog_1_1  Var_2_1_2  manifest
backend/data/g13236/: edge_2_1_2
backend/data/g13353/: App_4_1_2_3_4  Lam_4_1_2_3_4  Prog_1_1  Var_2_1_2  manifest
backend/data/g207253/: App_4_1_2_3_4  App_4_1_2_3_4.size  Lam_4_1_2_3_4  Var_2_1_2  Var_2_1_2.size  manifest
backend/data/g412148/: manifest
backend/data/g4470/: App_4_33  App_4_33.size  Lam_4_36  Lam_4_36.size  Prog_1_13  Var_2_5  Var_2_5.size  manifest
backend/data/g5955/: edge_2_1_2
backend/data/new_data/: D100000_20000  D100000_20000.size  DTSC_OPF_300.size  Dcircuit5M.size  Dlhr34.size  Dnemeth13.size  Drim.size
backend/data/worstcase-110-terms-10-m/: lam_2_25.dat.size  manifest
backend/data/worstcase-110-terms-4-m/: manifest
backend/data/worstcase-110-terms-5-m/: let_3_3.dat.size  manifest
backend/data/worstcase-110-terms-6-m/: manifest  seq_2_42.dat.size
backend/data/worstcase-110-terms-7-m/: app_2_55.dat.size  manifest
backend/data/worstcase-110-terms-8-m/: manifest
backend/data/worstcase-110-terms-9-m/: manifest  ref_1_16.dat.size
backend/data/worstcase-140-terms-8-m/: app_2_54.dat.size  lam_2_23.dat.size  let_3_6.dat.size  manifest  ref_1_21.dat.size  seq_2_42.dat.size
backend/data/worstcase-90-terms-6-m/: app_2_54.dat.size  lam_2_23.dat.size  manifest  ref_1_21.dat.size
backend/doxygen/: doxygen.cfg
backend/src/: ast.h  builtin.cpp  builtin.h  compat.h  ds.h  parallel_RA_inc.h  slog.cpp
backend/src/IO/: parallel_io.cpp  parallel_io.h
backend/src/RA/: fact.h  parallel_RA.h  parallel_acopy.cpp  parallel_acopy.h  parallel_agg.cpp  parallel_agg.h  parallel_copy.cpp  parallel_copy.h  parallel_copy_filter.cpp  parallel_copy_filter.h  parallel_copy_generate.cpp  parallel_copy_generate.h  parallel_join.cpp  parallel_join.h
backend/src/RAM/: RA_buffer_manager.cpp  RA_dynamic_load_balancer.cpp  RA_fixed_point_loop.cpp  RA_intra_bucket.cpp  RA_local_inserts.cpp  RA_local_join.cpp  RA_tasks.cpp  RA_tasks.h
backend/src/btree/: btree_container.h
backend/src/buffer/: vector_buffer.cpp  vector_buffer.h
backend/src/comm/: all_to_all_comm.cpp  all_to_all_comm.h  all_to_allv_comm.cpp  all_to_allv_comm.h  comm.cpp  comm.h  intra_bucket_comm.cpp  intra_bucket_comm.h
backend/src/disjointset/: disjointset.h
backend/src/hash/: fasthash.cpp  fasthash.h  hash.cpp  hash.h  spooky-c.cpp  spooky-c.h  xxhash.cpp
backend/src/lie/: lie.cpp  lie.h  lie_multi_task.cpp  lie_multi_task.h  slogc.h
backend/src/log/: logger.cpp  logger.h
backend/src/relation/: balanced_hash_relation.cpp  balanced_hash_relation.h  btree_relation.cpp  btree_relation.h  google_btree_relation.cpp  google_btree_relation.h  load_balancer.h  relation_load_balancer.cpp  shmap_relation.cpp  shmap_relation.h  shmap_relation_exp.cpp  trie_relation.h
backend/src/shmap/: Makefile  shmap.h  shmap_goog.h  test.cpp
backend/src/shmap/sbtree/: Makefile  sbtree.h  test.cpp
backend/src/shmap/strie/: Makefile  strie.h  test.cpp
backend/test/: Makefile  worstcase-140-terms-8-m.cpp
backend/tests/: all_to_all_benchmark.cpp  builtin.cpp  cfa-4-4-128.cpp  cfa-4-4-256.cpp  cfa-4-4-512.cpp  cfa-4-4-64.cpp  cspa.slog  fact.cpp  freevars.cpp  kcfa-tiny.cpp  nested.slog  out.cpp  out.slog  prim-3-1.slog  prim-32-3.cpp  test.slog  tiny.cpp  transitive_closure.cpp  worstcase-110-terms-10-m.cpp  worstcase-110-terms-4-m.cpp  worstcase-110-terms-5-m.cpp  worstcase-110-terms-6-m.cpp  worstcase-110-terms-7-m.cpp  worstcase-110-terms-8-m.cpp  worstcase-110-terms-9-m.cpp  worstcase-90-terms-6-m.cpp
backend/tests/cc/: ground_truth
backend/tests/cc/compiled_pre/: CMakeLists.txt  cc.cpp
backend/tests/cc/input-data/: edge.facts
backend/tests/msum/: msum.slog
backend/tests/msum/compiled_pre/: CMakeLists.txt  compiler-out  msum.cpp
backend/tests/pagerank/: ground_truth  pagerank.py  pagerank.slog
backend/tests/pagerank/compiled_pre/: CMakeLists.txt  pagerank.cpp  pagerank_full.cpp
backend/tests/pagerank/test-graph/: edge.fasts
backend/tests/prim-32-1/: CMakeLists.txt  benchmark.cpp  benchmark.slog
backend/tests/prim-32-1/benchmark-input/: manifest
backend/tests/sssp/: sssp.py  sssp.slog
backend/tests/sssp/compiled_pre/: CMakeLists.txt  compiler-out  res-128-1000.output  run_sssp.sh  sssp.cpp  sssp.cpp.backup  sssp_opt.cpp
backend/tests/sssp/test-input-graph/: edge.csv
backend/tests/update/: sssp.slog  sssp_update.cpp
backend/tests/update/compiled_pre/: CMakeLists.txt
backend/tests/update/test-input-graph/: edge.csv
backend/utility/: bin_tsv.py  binary_parser.cpp  instruction.csv  tsv_bin  tsv_to_bin.cpp
benchmarks/: CMakeLists.txt  README.md  (+18 more)
data/binaries/: CMakeLists.txt
(+675 files in other folders)
